# ChangeLog for net-misc/asterisk
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.163 2007/05/01 09:18:06 armin76 Exp $

  01 May 2007; Raúl Porcel <armin76@gentoo.org> asterisk-1.2.17.ebuild:
  x86 stable wrt security bug 175960

  30 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  asterisk-1.2.17.ebuild:
  Stable on sparc wrt security #175960

  27 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  files/1.2.0/asterisk-1.2.17-h323-dumb-makefile.diff:
  Fix H323 for real wrt #176259

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  -files/1.2.0/asterisk-1.2.17-ASA-2007-011.patch,
  -files/1.2.0/asterisk-1.2.17-ASA-2007-012.patch, asterisk-1.2.17.ebuild:
  Fix for cvs breaking headers on patches #176170

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  asterisk-1.2.17.ebuild:
  Also >=zaptel-1.2.16 while we're at it too

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  asterisk-1.2.17.ebuild:
  Make 1.2.17 want libpri-1.2.4

*asterisk-1.2.17 (26 Apr 2007)

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  +files/1.2.0/asterisk-1.2.17-ASA-2007-011.patch,
  +files/1.2.0/asterisk-1.2.17-ASA-2007-012.patch,
  +files/1.2.0/asterisk-1.2.17-h323-dumb-makefile.diff,
  +asterisk-1.2.17.ebuild:
  Verbump, should close #175960, #175858, #172680 and #172257

  19 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  files/1.2.0/asterisk.rc6:
  Fix for nice absolute path #174539

  05 Apr 2007; Roy Marples <uberlord@gentoo.org> files/1.2.0/asterisk.rc6:
  use nscd and dns so that asterisk can resolve server names on boot.

  23 Mar 2007; Rajiv Aaron Manglani <rajiv@gentoo.org>
  -files/1.0.0/asterisk-1.0.12-chan_sip.patch, -asterisk-1.0.12-r1.ebuild:
  remove old ebuild.

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> asterisk-1.0.12-r2.ebuild,
  asterisk-1.2.14-r2.ebuild:
  x86 stable wrt security bug 171467

*asterisk-1.2.14-r2 (20 Mar 2007)
