@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/asterisk-1.2.13-r1.ebuild,v 1.5 2007/01/06 16:27:46 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/asterisk-1.2.13-r1.ebuild,v 1.6 2007/07/02 16:55:35 cardoe Exp $
 
 inherit eutils multilib toolchain-funcs
 
@@ -423,11 +423,9 @@ pkg_postinst() {
 	elog "If you want to know more about asterisk, visit these sites:"
 	elog "http://www.asteriskdocs.org/"
 	elog "http://www.voip-info.org/wiki-Asterisk"
-	echo
-	elog "http://asterisk.xvoip.com/"
-	elog "http://junghanns.net/asterisk/"
+	elog
 	elog "http://www.automated.it/guidetoasterisk.htm"
-	echo
+	elog
 	elog "Gentoo VoIP IRC Channel:"
 	elog "#gentoo-voip @ irc.freenode.net"
 	echo
